--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Accountant Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Space Grotesk', sans-serif;
       background: #ffffff;
       color: #000000;
       margin: 0;
       padding: 20px;
+      font-size: 14px;
     }
     h1, h2 {
       border-bottom: 2px solid #000;
+      font-size: 18px;
     }
     .section {
       margin-bottom: 40px;
@@ -26,6 +29,7 @@
       width: 200px;
       padding: 5px;
       margin-bottom: 10px;
+      font-size: 14px;
     }
     .highlight {
       color: #d3ff00;
@@ -36,6 +40,18 @@
       color: #d3ff00;
       padding: 10px;
       margin-top: 20px;
+    }
+    button {
+      background-color: #000;
+      color: #d3ff00;
+      border: none;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      opacity: 0.8;
     }
   </style>
 </head>
@@ -99,3 +115,4 @@
   </script>
 </body>
 </html>
+
